--- a/privacy.html
+++ b/privacy.html
@@ -68,5 +68,5 @@
 <p>If we make a significant change to this privacy policy, for example changing a lawful basis on which we process your personal information, we will ask you to re-consent to the amended privacy policy.</p>
 <p><strong>Niveus Games Ltd Data Controller</strong><br />
 Niveus Games Ltd<br />
-niveusgames@gmail.com</p>
+support@niveusgames.com</p>
 <p>This policy is effective as of May 23, 2020.</p>
